cleanup, including some deprecation